--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "brunch w -s",
     "build": "brunch b -p",
-    "test": "npm test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/hweeks/hweeks#readme",
   "dependencies": {
     "brunch": "^2.10.10",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.2.0",
@@ -29,9 +30,20 @@
   "devDependencies": {
     "auto-reload-brunch": "^2.7.1",
     "babel-brunch": "^6.1.1",
+    "babel-jest": "^20.0.3",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-css-brunch": "^2.10.0",
+    "enzyme": "^2.9.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.3.0",
+    "jest": "^20.0.4",
+    "react-addons": "^0.9.1-deprecated",
+    "react-test-renderer": "^15.6.1",
+    "regenerator-runtime": "^0.11.0",
     "uglify-js-brunch": "^2.10.0"
   }
 }
