--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start": "brunch w -s",
     "build": "brunch b -p",
     "test": "jest",
-    "ci": "npm run ci-test; npm run ci-lint",
+    "lint": "eslint app/",
+    "stylelint": "stylelint app/sass/*.scss",
+    "ci": "npm run ci-test; npm run ci-lint; npm run ci-stylelint",
     "ci-test": "$(npm bin)/jest",
-    "ci-lint": "$(npm bin)/eslint app/"
+    "ci-lint": "$(npm bin)/eslint app/",
+    "ci-stylelint": "$(npm bin)/stylelint app/sass/*.scss"
   },
   "repository": {
     "type": "git",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "auto-reload-brunch": "^2.7.1",
+    "autoprefixer": "^7.1.3",
     "babel-brunch": "^6.1.1",
     "babel-jest": "^20.0.3",
     "babel-preset-es2015": "^6.24.1",
@@ -45,9 +49,11 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.3.0",
     "jest": "^20.0.4",
-    "react-addons": "^0.9.1-deprecated",
+    "postcss-brunch": "^2.0.5",
+    "postcss-scss": "^1.0.2",
     "react-test-renderer": "^15.6.1",
     "regenerator-runtime": "^0.11.0",
+    "stylelint-brunch": "0.0.2",
     "uglify-js-brunch": "^2.10.0"
   }
 }
