--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,4 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm run ci
       - run: ssh-keyscan -H 34.210.133.207 >> ~/.ssh/known_hosts
-      - run: ssh ec2-user@34.210.133.207
+      - run: ssh -o ec2-user@34.210.133.207
