--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,6 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      - run: npm run ci
+      # - run: npm run ci
       - run: ssh-keyscan -H 34.210.133.207 >> ~/.ssh/known_hosts
       - run: ssh -o ec2-user@34.210.133.207
