--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,6 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       # - run: npm run ci
-      - run: cat ~/.ssh/id_rsa.pub
+      - run: ls ~/.ssh/
       - run: ssh-keyscan -H 34.210.133.207 >> ~/.ssh/known_hosts
       - run: ssh -o ec2-user@34.210.133.207
