--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       # - run: npm run ci
-      - run: ssh-keygen -t rsa -N ''
+      - run: ssh-keygen -f id_rsa -t rsa -N ''
       - run: ls ~/.ssh/
       - run: ssh-keyscan -H 34.210.133.207 >> ~/.ssh/known_hosts
       - run: ssh -o ec2-user@34.210.133.207
