--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
+            - ssh-local
           key: v1-dependencies-{{ checksum "package.json" }}
-      # - run: npm run ci
-      # - run: mkdir aws
       # - run: ssh-keygen -b 2048 -t rsa -f aws/id_rsa -q -N ""
-      - run: ls aws/
-      - run: ssh-keyscan -H 34.210.133.207 >> ~/.ssh/known_hosts
       - run: ssh -o ec2-user@34.210.133.207
