--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,4 +20,4 @@ jobs:
       - run: cd ~/repo
       - run: mkdir ssh-local
       - run: ssh-keygen -b 2048 -t rsa -f ssh-local/id_rsa -q -N ""
-      - run: ssh ec2-user@34.210.133.207
+      # - run: ssh ec2-user@34.210.133.207
