--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "My Homepage",
   "main": "index.js",
   "scripts": {
-    "start": "brunch w -s",
-    "build": "brunch b -p",
-    "test": "jest",
-    "lint": "eslint app/",
-    "stylelint": "stylelint app/sass/*.scss",
+    "start": "$(npm bin)/brunch w -s",
+    "build": "$(npm bin)/brunch b -p",
+    "test": "$(npm bin)/jest",
+    "lint": "$(npm bin)/eslint app/",
+    "stylelint": "$(npm bin)/stylelint app/sass/*.scss",
     "ci": "npm run ci-test; npm run ci-lint; npm run ci-stylelint",
     "ci-test": "$(npm bin)/jest",
     "ci-lint": "$(npm bin)/eslint app/",
