--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hweeks",
-  "version": "1..0.0",
+  "version": "1.0.0",
   "description": "My Homepage",
   "main": "index.js",
   "scripts": {
