--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "express": "^4.16.2",
     "forever": "^0.15.3",
     "helmet": "^3.13.0",
+    "highlight.js": "^9.12.0",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "16",
+    "react-dom": "16",
     "react-markdown": "^3.6.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
