--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "My Homepage",
   "main": "index.js",
   "scripts": {
-    "start": "$(npm bin)/brunch w -s",
-    "build": "$(npm bin)/brunch b -p",
-    "test": "$(npm bin)/jest",
-    "lint": "$(npm bin)/eslint app/",
-    "stylelint": "$(npm bin)/stylelint app/sass/*.scss",
+    "start": "IS_DEV=true webpack-dev-server",
+    "build": "webpack",
+    "test": "jest",
+    "lint": "eslint src/",
+    "stylelint": "stylelint src/sass/*.scss",
     "ci": "npm run ci-test; npm run ci-lint; npm run ci-stylelint",
-    "ci-test": "$(npm bin)/jest",
-    "ci-lint": "$(npm bin)/eslint app/",
-    "ci-stylelint": "$(npm bin)/stylelint app/sass/*.scss",
-    "serve": "$(npm bin)/forever node ./server/"
+    "ci-test": "jest",
+    "ci-lint": "eslint src/",
+    "ci-stylelint": "stylelint src/sass/*.scss",
+    "serve": "forever node ./server/"
   },
   "repository": {
     "type": "git",
@@ -26,40 +26,44 @@
   },
   "homepage": "https://github.com/hweeks/hweeks#readme",
   "dependencies": {
-    "brunch": "^2.10.10",
     "express": "^4.16.2",
     "forever": "^0.15.3",
     "helmet": "^3.13.0",
     "highlight.js": "^9.12.0",
     "prop-types": "^15.5.10",
-    "react": "16",
-    "react-dom": "16.0.1",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-markdown": "^3.6.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "sass-brunch": "^2.10.4"
+    "styled-components": "^4.2.0",
+    "styled-reset": "^2.0.10"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "auto-reload-brunch": "^2.7.1",
     "autoprefixer": "^7.1.3",
     "babel-brunch": "^6.1.1",
     "babel-jest": "^20.0.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "clean-css-brunch": "^2.10.0",
+    "babel-loader": "^8.0.6",
+    "commitizen": "^3.1.1",
     "enzyme": "^2.9.1",
     "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.3.0",
-    "jest": "^20.0.4",
-    "postcss-brunch": "^2.0.5",
-    "postcss-scss": "^1.0.2",
-    "react-test-renderer": "^15.6.1",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "24.8.0",
+    "react-test-renderer": "16.8.6",
     "regenerator-runtime": "^0.11.0",
-    "stylelint-brunch": "0.0.2",
-    "uglify-js-brunch": "^2.10.0"
+    "uglify-js-brunch": "^2.10.0",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   }
 }
