--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           - v1-dependencies-
       - run: |
           ssh-keyscan -H 206.189.222.25 >> ~/.ssh/known_hosts
-          ssh root@206.189.222.25 'source ~/deploy.sh -n hweeks -i hams/hweeks:$(git log -1 --format=%h) -p 3000:3000 -s hweeks.com -r http://hweeks:3000
+          ssh root@206.189.222.25 'source ~/deploy.sh -n hweeks -i hams/hweeks:$(git log -1 --format=%h) -p 3000:3000 -s hweeks.com -r http://hweeks:3000'
 workflows:
   version: 2
   build_and_deploy:
