ci: fix release order

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,8 @@ workflows:
       - build
       - deploy-sha
       - deploy:
+          requires:
+            - deploy-sha
           filters:
               branches:
                   only: master
