--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
           docker build -t hweeks-circle --build-arg GIT_COMMIT=$(git log -1 --format=%h) .
           docker tag hweeks-circle hams/hweeks:$(git log -1 --format=%h)
           docker push hams/hweeks:$(git log -1 --format=%h)
+          docker push hams/hweeks:latest
   deploy:
     docker:
       - image: circleci/node:8
@@ -40,7 +41,7 @@ jobs:
           - v1-dependencies-
       - run: |
           ssh-keyscan -H 206.189.222.25 >> ~/.ssh/known_hosts
-          ssh root@206.189.222.25 'source ~/deploy.sh -n hweeks -i hams/hweeks:$(git log -1 --format=%h) -p 3000:3000 -s hweeks.com -r http://hweeks:3000'
+          ssh root@206.189.222.25 'source ~/deploy.sh -n hweeks -i hams/hweeks:latest -p 3000:3000 -s hweeks.com -r http://hweeks:3000'
 workflows:
   version: 2
   build_and_deploy:
