--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "build": "webpack",
     "test": "jest",
     "lint": "eslint src/",
-    "stylelint": "stylelint src/sass/*.scss",
-    "ci": "npm run ci-test; npm run ci-lint; npm run ci-stylelint",
+    "ci": "npm run ci-test; npm run ci-lint",
     "ci-test": "jest",
-    "ci-lint": "eslint src/",
-    "ci-stylelint": "stylelint src/sass/*.scss",
-    "serve": "forever node ./server/"
+    "ci-lint": "eslint src/"
   },
   "repository": {
     "type": "git",
@@ -27,7 +24,6 @@
   "homepage": "https://github.com/hweeks/hweeks#readme",
   "dependencies": {
     "express": "^4.16.2",
-    "forever": "^0.15.3",
     "helmet": "^3.13.0",
     "highlight.js": "^9.12.0",
     "prop-types": "^15.5.10",
@@ -44,7 +40,6 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "auto-reload-brunch": "^2.7.1",
     "autoprefixer": "^7.1.3",
     "babel-brunch": "^6.1.1",
     "babel-jest": "^20.0.3",
@@ -61,7 +56,6 @@
     "jest": "24.8.0",
     "react-test-renderer": "16.8.6",
     "regenerator-runtime": "^0.11.0",
-    "uglify-js-brunch": "^2.10.0",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1"
